RESOLVED FIXED68568
Fix full-page rubber band overhang appearing when gesturing during a slow page load.
https://bugs.webkit.org/show_bug.cgi?id=68568
Summary Fix full-page rubber band overhang appearing when gesturing during a slow pag...
asvitkine
Reported 2011-09-21 13:32:12 PDT
Fix full-page rubber band overhang appearing when gesturing during a slow page load.
Attachments
Patch (4.00 KB, patch)
2011-09-21 13:35 PDT, asvitkine
no flags
asvitkine
Comment 1 2011-09-21 13:35:32 PDT
asvitkine
Comment 2 2011-09-21 13:36:38 PDT
bdakin@, do these changes makes sense to you?
Adam Barth
Comment 3 2011-09-21 13:46:56 PDT
Comment on attachment 108225 [details] Patch This approach looks much better than asking FrameLoader about the state of the load. Thanks for investigating further.
asvitkine
Comment 4 2011-09-26 10:34:05 PDT
Ping! Any comments?
Beth Dakin
Comment 5 2011-09-26 11:22:24 PDT
Sorry for the delay! Yes, I think this change looks okay.
Adam Barth
Comment 6 2011-09-26 11:46:43 PDT
Comment on attachment 108225 [details] Patch Sounds like we should rock and roll.
WebKit Review Bot
Comment 7 2011-09-26 14:43:34 PDT
Comment on attachment 108225 [details] Patch Clearing flags on attachment: 108225 Committed r95997: <http://trac.webkit.org/changeset/95997>
WebKit Review Bot
Comment 8 2011-09-26 14:43:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.