Fix full-page rubber band overhang appearing when gesturing during a slow page load. https://bugs.webkit.org/show_bug.cgi?id=68568

Chromium bug: http://code.google.com/p/chromium/issues/detail?id=97243

(This also happens on Safari.)

The problem was that ScrollView::overhangAmount() was returning a full-page overhang due to contentsSize() being 0 briefly during a page load, which was then getting used by ScrollAnimatorChromiumMac.mm to update the overhang on a gesture event. This change makes the relevant logic not return an overhang if the contentsSize() is empty.

Patch by Alexei Svitkine <asvitkine@chromium.org> on 2011-09-26
Reviewed by Adam Barth.

No new tests, since this is highly timing-related.

* platform/ScrollView.cpp:
(WebCore::ScrollView::overhangAmount):
(WebCore::ScrollView::wheelEvent):

Canonical link: https://commits.webkit.org/84800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95997 268f45cc-cd09-0410-ab3c-d52691b4dbfc